--- a/style.css
+++ b/style.css
@@ -6,3 +6,12 @@
 .adv{
     cursor: pointer;
 }
+
+.loader{
+    position: fixed;
+    margin: 0px;
+    width: 100%;
+    height: 100vh;
+    background-color: transparent;
+    z-index: 6;
+}
